clipboard manager added . words from clip mgr will be copied to table next-> starred fragment development

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,10 @@
 
     <string name="hint_word">Word...</string>
     <string name="button_save">Save</string>
-    <string name="empty_not_saved">Word not saved because it is empty.</string>
+    <string name="empty_not_saved">Data not saved because it is empty.</string>
+
+    <string name="title_all">All</string>
+    <string name="title_starred">Starred</string>
+    <string name="title_setting">Setting</string>
+
 </resources>
